test: alpine build